--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Muhammad Idris # your name (or website title) here
+logo: "/images/rounded.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  A Data Science bootcamp graduate trained in Analytics, Data & Database, Python, Statistics, Data Visualizations and Machine Learning. 
   <br><br>
-  Second description 
+  Has practical experience in EPC Project Management and proven leadership capabilities in organization activities. Organized, detail-oriented, eager to learn, and ready for new challenges. 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/muhammad-idris/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
