--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Muhammad Idris # your name (or website title) here
-logo: "/images/rounded.png?raw=true" # your photo (or logo) here
+logo: "/images/rounded.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   A Data Science bootcamp graduate trained in Analytics, Data & Database, Python, Statistics, Data Visualizations and Machine Learning. 
   <br><br>
