--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: Muhammad Idris # your name (or website title) here
 logo: "/images/rounded-frame.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <br><br>
-  A Data Science bootcamp graduate trained in Analytics, Data & Database, Python, Statistics, Data Visualizations and Machine Learning. 
-  <br><br>
-  Has practical experience in EPC Project Management and proven leadership capabilities in organization activities. Organized, detail-oriented, eager to learn, and ready for new challenges. 
+  A Data Science bootcamp graduate trained in Analytics, Data & Database, Python, Statistics, Data Visualizations and Machine Learning, with practical experience in EPC Project Management and proven leadership capabilities in organization activities. 
   <br><br>
   <a href="https://www.linkedin.com/in/muhammad-idris/">View My LinkedIn Profile</a> 
   
